[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myq"
version = "0.0.1"
authors = [
    { name="Naphtali Gilead", email="naphtul@hotmail.com" },
]
description = "A Python SDK for MyQ API, utilizing pymyq package by arraylabs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymyq==3.1.6"
]

[project.urls]
"Homepage" = "https://github.com/naphtul/myq-garage-python"
"Bug Tracker" = "https://github.com/naphtul/myq-garage-python/issues"